WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228967
[Live Text] Unable to start drag on image when the first piece of text inside the image is selected
https://bugs.webkit.org/show_bug.cgi?id=228967
Summary
[Live Text] Unable to start drag on image when the first piece of text inside...
Wenson Hsieh
Reported
2021-08-10 13:34:55 PDT
(Alternate bug title — the API test DragAndDropTests.DragElementWithImageOverlay fails on macOS)
Attachments
Fixes the bug
(3.95 KB, patch)
2021-08-10 14:34 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-08-10 13:35:17 PDT
rdar://80471465
Wenson Hsieh
Comment 2
2021-08-10 14:34:11 PDT
Created
attachment 435294
[details]
Fixes the bug
EWS
Comment 3
2021-08-10 16:51:52 PDT
Committed
r280872
(
240411@main
): <
https://commits.webkit.org/240411@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435294
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug